--- a/public/admin/assets/css/style.css
+++ b/public/admin/assets/css/style.css
@@ -26286,4 +26286,25 @@ dl li {
   -webkit-flex-grow: 1;
   flex-grow: 1;
 }
+.pengajuan-search-results {
+    position: absolute;
+    width: 100%;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-top: none;
+    max-height: 220px;
+    overflow-y: auto;
+    z-index: 1000;
+}
+
+.pengajuan-search-item {
+    padding: 10px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.pengajuan-search-item:hover {
+    background: #f5f5f5;
+}
+
 /*# sourceMappingURL=maps/style.css.map */
